--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,14 @@ sonar.organization=rnmobile21
 #sonar.projectName=metamask-mobile
 #sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+
+# main language to be analyzed
+sonar.language=JavaScript
+# Path to tests
+sonar.sources=src
+sonar.tests=
+sonar.test.inclusions=__tests__/**/*-test.js,__tests__/**/*.test.js
+sonar.exclusions=**/node_modules/**, coverage/**, **/__mocks__/**, android/**, ios/**, **/*-test.tsx, **/*.test.tsx, **/*-test.ts, **/*.test.ts
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
