--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.organization=rnmobile21
 # main language to be analyzed
 sonar.language=JavaScript
 # Path to tests
-sonar.sources=src
+sonar.sources=app
 sonar.tests=
 sonar.test.inclusions=__tests__/**/*-test.js,__tests__/**/*.test.js
 sonar.exclusions=**/node_modules/**, coverage/**, **/__mocks__/**, android/**, ios/**, **/*-test.tsx, **/*.test.tsx, **/*-test.ts, **/*.test.ts
